--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                 <!-- Enlace para suscribirse al newsletter -->
             <div>
             <div>
-                <a href="views/newsletter.html">¡Suscríbete a nuestro newsletter!</a>
+                <a href="views/contacto.html">Formulario de Contacto |</a>
+                <a href="views/newsletter.html">Suscríbete a nuestro Newsletter</a>
             </div>
             <hr>
             </div>
